<resources>
    <string name="app_name">WeDigITApp</string>
    <string name="back_button_description">back button description</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="enter_email">Enter email</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">LOGIN</string>
    <string name="sign_up_here">Sign up here</string>
    <string name="new_to_wejammin">New to WeJammin?</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="user_name">arlenecoy</string>
    <string name="about_info">Lorem ipsum dolor sit amet, consectetur Lorem ipsum dolor sit amet, consecteturLorem</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>